--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>إمبراطورية علوش V91 👑</title>
+    <title>إمبراطورية علوش V92 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
         :root { --gold: #ffd700; --bg: #0b0b0b; }
-        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
+        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; outline: none; }
         body { background: var(--bg); color: white; height: 100vh; overflow: hidden; display: flex; flex-direction: column; }
 
         /* شاشة تسجيل الدخول */
         #login-screen {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-            background: #000; z-index: 20000; display: flex; align-items: center; justify-content: center;
+            background: #000; z-index: 99999; display: flex; align-items: center; justify-content: center;
         }
         .login-card {
             background: #111; padding: 30px; border-radius: 20px; border: 2px solid var(--gold);
-            text-align: center; width: 90%; max-width: 400px;
+            text-align: center; width: 90%; max-width: 400px; box-shadow: 0 0 20px rgba(255,215,0,0.2);
         }
 
         /* الاسم الملكي والثيمات */
@@ -30,28 +30,26 @@
         .theme-ocean { background-image: linear-gradient(to right, #00d2ff, #3a7bd5, #00d2ff); }
 
         /* الهيدر والقوائم */
-        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; }
-        .side { position: fixed; top: 0; bottom: 0; width: 285px; background: #0e0e0e; z-index: 10000; transition: 0.4s ease; visibility: hidden; overflow-y: auto; }
-        #side-r { right: -290px; border-left: 2px solid var(--gold); }
-        #side-l { left: -290px; border-right: 2px solid var(--gold); }
-        .side.active { visibility: visible; transform: translateX(0); }
-        #side-r.active { transform: translateX(-285px); }
-        #side-l.active { transform: translateX(285px); }
+        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; }
+        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: #0e0e0e; z-index: 10000; transition: 0.3s ease-in-out; visibility: hidden; overflow-y: auto; }
+        #side-r { right: -285px; border-left: 2px solid var(--gold); }
+        #side-l { left: -285px; border-right: 2px solid var(--gold); }
+        .side.active { visibility: visible; }
+        #side-r.active { transform: translateX(-280px); }
+        #side-l.active { transform: translateX(280px); }
         #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9000; display: none; }
 
-        /* الشات */
+        /* الشات والفوتر */
         #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 15px; }
         .bubble { background: #161616; padding: 12px; border-radius: 15px; border: 1px solid #222; max-width: 85%; }
-
-        /* الفوتر (إصلاح للهاتف والحاسبة) */
         .footer { height: 95px; background: #000; border-top: 1px solid #222; display: flex; align-items: flex-start; padding: 10px 15px 30px 15px; }
-        #msg-in { flex: 1; height: 50px; background: #111; border: 1px solid #333; border-radius: 25px; color: #fff; padding: 0 20px; outline: none; }
-        .send-btn { background: var(--gold); color: black; border: none; height: 50px; padding: 0 20px; border-radius: 25px; font-weight: 900; margin-right: 10px; cursor: pointer; }
+        #msg-in { flex: 1; height: 50px; background: #111; border: 1px solid #333; border-radius: 25px; color: #fff; padding: 0 20px; font-size: 16px; }
+        .send-btn { background: var(--gold); color: black; border: none; height: 50px; padding: 0 25px; border-radius: 25px; font-weight: 900; cursor: pointer; margin-right: 8px; }
 
         /* أدوات الزخرفة */
         .decor-box { background: #1a1a1a; padding: 12px; border-radius: 10px; margin: 10px; border: 1px solid #333; text-align: center; }
-        .custom-input { width: 100%; padding: 8px; border-radius: 5px; border: 1px solid #444; background: #000; color: white; margin-bottom: 10px; text-align: center; }
-        .decor-btn { width: 100%; padding: 8px; margin-top: 5px; border: none; border-radius: 5px; cursor: pointer; color: white; font-weight: bold; }
+        .custom-input { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid #444; background: #000; color: white; margin-bottom: 15px; text-align: center; }
+        .decor-btn { width: 100%; padding: 10px; margin-top: 5px; border: none; border-radius: 5px; cursor: pointer; color: white; font-weight: bold; }
     </style>
 </head>
 <body>
@@ -59,20 +57,145 @@
 <div id="login-screen">
     <div class="login-card">
         <h1 class="name-glow theme-gold" style="font-size: 26px;">دخول الإمبراطورية</h1>
-        <input type="text" id="user-name-in" class="custom-input" placeholder="اكتب اسمك هنا..." style="margin-top:20px; height:50px;">
-        <button class="send-btn" style="width:100%; margin:0;" onclick="login()">دخول</button>
+        <input type="text" id="user-name-in" class="custom-input" placeholder="اكتب اسمك هنا..." style="margin-top:20px;">
+        <button class="send-btn" style="width:100%; margin:0;" onclick="handleLogin()">دخول الآن</button>
     </div>
 </div>
 
 <div id="overlay" onclick="closeSides()"></div>
 
 <div class="header">
-    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px; color:white;">⚙️</button>
+    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px; color:white; cursor:pointer;">⚙️</button>
     <div class="name-glow theme-gold">إمبراطورية علوش</div>
-    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px; color:white;">👥</button>
+    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px; color:white; cursor:pointer;">👥</button>
 </div>
 
 <div id="side-r" class="side">
     <h3 style="padding:20px; text-align:center; color:gold;">🛡️ المتصلون</h3>
     <div id="admin-tools" style="padding:10px; display:none;">
-        <button onclick="db.ref('chat_v91').remove()" class="decor-btn" style="background:red;">
+        <button onclick="db.ref('chat_v92').remove()" class="decor-btn" style="background:red;">🧹 تنظيف الشات</button>
+    </div>
+    <div id="on-list" style="padding:10px;"></div>
+</div>
+
+<div id="side-l" class="side">
+    <div style="padding:20px; text-align:center;">
+        <img id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:80px; height:80px; border-radius:50%; border:2px solid gold; cursor:pointer;" onclick="document.getElementById('file-in').click()">
+        <input type="file" id="file-in" hidden onchange="changeAv(this)">
+        <h2 id="display-name" class="name-glow theme-gold">الاسم</h2>
+    </div>
+    <div class="decor-box">
+        <p style="font-size:12px; color:gold; margin-bottom:8px;">✍️ زخرفة اسمك:</p>
+        <input type="text" id="custom-decor" class="custom-input" placeholder="مثال: 👑" oninput="updateProfile()">
+    </div>
+    <div class="decor-box">
+        <p style="font-size:12px; color:gold; margin-bottom:8px;">🎨 لون الاسم:</p>
+        <button class="decor-btn theme-gold" onclick="setTheme('theme-gold')">ذهبي</button>
+        <button class="decor-btn theme-fire" onclick="setTheme('theme-fire')">ناري</button>
+        <button class="decor-btn theme-ocean" onclick="setTheme('theme-ocean')">أزرق</button>
+    </div>
+</div>
+
+<div id="chat-flow"></div>
+
+<div class="footer">
+    <input type="text" id="msg-in" placeholder="اكتب رسالتك..." onkeypress="if(event.key==='Enter') sendMsg()">
+    <button class="send-btn" onclick="sendMsg()">إرسال</button>
+</div>
+
+<script>
+    const config = { databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com" };
+    firebase.initializeApp(config);
+    const db = firebase.database();
+
+    let me = { name: "", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png", theme: "theme-gold", decor: "" };
+
+    // فحص إذا كان مسجلاً مسبقاً
+    window.onload = () => {
+        let saved = localStorage.getItem('allosh_user');
+        if(saved) {
+            me = JSON.parse(saved);
+            startApp();
+        }
+    };
+
+    function handleLogin() {
+        let n = document.getElementById('user-name-in').value.trim();
+        if(n.length < 2) return alert("الاسم قصير جداً!");
+        me.name = n;
+        localStorage.setItem('allosh_user', JSON.stringify(me));
+        startApp();
+    }
+
+    function startApp() {
+        document.getElementById('login-screen').style.display = 'none';
+        document.getElementById('display-name').innerText = `${me.decor} ${me.name} ${me.decor}`;
+        document.getElementById('display-name').className = `name-glow ${me.theme}`;
+        if(me.name === "علوش") document.getElementById('admin-tools').style.display = 'block';
+        
+        const ref = db.ref('online_v92/' + me.name);
+        ref.set(me);
+        ref.onDisconnect().remove();
+    }
+
+    function updateProfile() {
+        me.decor = document.getElementById('custom-decor').value;
+        document.getElementById('display-name').innerText = `${me.decor} ${me.name} ${me.decor}`;
+        localStorage.setItem('allosh_user', JSON.stringify(me));
+        db.ref('online_v92/' + me.name).update(me);
+    }
+
+    function setTheme(t) {
+        me.theme = t;
+        document.getElementById('display-name').className = `name-glow ${t}`;
+        localStorage.setItem('allosh_user', JSON.stringify(me));
+        db.ref('online_v92/' + me.name).update(me);
+    }
+
+    function changeAv(i) {
+        if(i.files && i.files[0]) {
+            let r = new FileReader();
+            r.onload = (e) => { 
+                me.img = e.target.result; 
+                document.getElementById('my-av').src = me.img;
+                localStorage.setItem('allosh_user', JSON.stringify(me));
+                db.ref('online_v92/' + me.name).update(me);
+            };
+            r.readAsDataURL(i.files[0]);
+        }
+    }
+
+    function sendMsg() {
+        let i = document.getElementById('msg-in'); if(!i.value || !me.name) return;
+        db.ref('chat_v92').push({ u: me.name, t: i.value, a: me.img, theme: me.theme, decor: me.decor });
+        i.value = "";
+    }
+
+    db.ref('chat_v92').limitToLast(30).on('child_added', s => {
+        let d = s.val();
+        let div = document.createElement('div');
+        div.style.display="flex"; div.style.gap="10px"; div.style.marginBottom="15px";
+        div.innerHTML = `<img src="${d.a}" style="width:40px; height:40px; border-radius:50%; border:1px solid gold;">
+            <div class="bubble">
+                <span class="name-glow ${d.theme}">${d.decor} ${d.u} ${d.decor}</span>
+                <div style="margin-top:5px;">${d.t}</div>
+            </div>`;
+        document.getElementById('chat-flow').appendChild(div);
+        document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
+    });
+
+    db.ref('online_v92').on('value', s => {
+        let l = document.getElementById('on-list'); l.innerHTML = "";
+        s.forEach(u => {
+            let d = u.val();
+            l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #222;">
+                <span class="name-glow ${d.theme}">${d.decor} ${u.key} ${d.decor}</span>
+            </div>`;
+        });
+    });
+
+    function openSide(id) { closeSides(); document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
+    function closeSides() { document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); document.getElementById('overlay').style.display = 'none'; }
+</script>
+</body>
+</html>
