--- a/index.html
+++ b/index.html
@@ -2,54 +2,64 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>إمبراطورية علوش V92 👑</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, interactive-widget=resizes-content">
+    <title>إمبراطورية علوش V93 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
         :root { --gold: #ffd700; --bg: #0b0b0b; }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; outline: none; }
-        body { background: var(--bg); color: white; height: 100vh; overflow: hidden; display: flex; flex-direction: column; }
+        body { background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+
+        /* تأثير اسم المالك (علوش) */
+        .owner-style { 
+            font-size: 22px !important; 
+            text-shadow: 0 0 10px gold, 0 0 20px orange; 
+            animation: owner-glow 1.5s infinite alternate;
+            display: inline-block;
+        }
+        @keyframes owner-glow { 
+            from { transform: scale(1); filter: drop-shadow(0 0 5px gold); } 
+            to { transform: scale(1.05); filter: drop-shadow(0 0 15px yellow); } 
+        }
 
         /* شاشة تسجيل الدخول */
-        #login-screen {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-            background: #000; z-index: 99999; display: flex; align-items: center; justify-content: center;
-        }
-        .login-card {
-            background: #111; padding: 30px; border-radius: 20px; border: 2px solid var(--gold);
-            text-align: center; width: 90%; max-width: 400px; box-shadow: 0 0 20px rgba(255,215,0,0.2);
-        }
+        #login-screen { position: fixed; inset: 0; background: #000; z-index: 99999; display: flex; align-items: center; justify-content: center; }
+        .login-card { background: #111; padding: 30px; border-radius: 20px; border: 2px solid var(--gold); text-align: center; width: 90%; max-width: 400px; }
 
-        /* الاسم الملكي والثيمات */
-        .name-glow { font-weight: 900; animation: shine 2s linear infinite; background-size: 200% auto; -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        /* القوائم */
+        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; position: relative; z-index: 1001; }
+        .side { position: fixed; top: 0; bottom: 0; width: 285px; background: #0e0e0e; z-index: 10000; transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1); visibility: hidden; overflow-y: auto; }
+        #side-r { right: -290px; border-left: 2px solid var(--gold); }
+        #side-l { left: -290px; border-right: 2px solid var(--gold); }
+        .side.active { visibility: visible; }
+        #side-r.active { transform: translateX(-285px); }
+        #side-l.active { transform: translateX(285px); }
+        #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 9000; display: none; }
+
+        /* الشات والفوتر المحسن للموبايل */
+        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; padding-bottom: 110px; }
+        .bubble { background: #161616; padding: 12px; border-radius: 15px; border: 1px solid #222; max-width: 85%; position: relative; }
+        
+        .footer { 
+            position: fixed; bottom: 0; left: 0; width: 100%; height: 90px; 
+            background: #000; border-top: 2px solid #222; 
+            display: flex; align-items: center; padding: 0 10px 15px 10px; z-index: 2000;
+        }
+        #msg-in { flex: 1; height: 50px; background: #111; border: 1px solid #444; border-radius: 25px; color: #fff; padding: 0 20px; font-size: 16px; }
+        .send-btn { background: var(--gold); color: black; border: none; height: 50px; padding: 0 20px; border-radius: 25px; font-weight: 900; margin-right: 8px; cursor: pointer; min-width: 80px; }
+
+        /* البحث الجانبي (يوتيوب) */
+        .yt-box { padding: 10px; border-bottom: 1px solid #333; }
+        iframe { width: 100%; border-radius: 10px; margin-top: 10px; border: 1px solid gold; }
+
+        /* الألوان والزخرفة */
+        .name-glow { font-weight: 900; background-size: 200% auto; -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: shine 2s linear infinite; }
         @keyframes shine { to { background-position: 200% center; } }
         .theme-gold { background-image: linear-gradient(to right, #ffd700, #fff, #ffd700); }
         .theme-fire { background-image: linear-gradient(to right, #ff416c, #ff4b2b, #ff416c); }
         .theme-ocean { background-image: linear-gradient(to right, #00d2ff, #3a7bd5, #00d2ff); }
-
-        /* الهيدر والقوائم */
-        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; }
-        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: #0e0e0e; z-index: 10000; transition: 0.3s ease-in-out; visibility: hidden; overflow-y: auto; }
-        #side-r { right: -285px; border-left: 2px solid var(--gold); }
-        #side-l { left: -285px; border-right: 2px solid var(--gold); }
-        .side.active { visibility: visible; }
-        #side-r.active { transform: translateX(-280px); }
-        #side-l.active { transform: translateX(280px); }
-        #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9000; display: none; }
-
-        /* الشات والفوتر */
-        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 15px; }
-        .bubble { background: #161616; padding: 12px; border-radius: 15px; border: 1px solid #222; max-width: 85%; }
-        .footer { height: 95px; background: #000; border-top: 1px solid #222; display: flex; align-items: flex-start; padding: 10px 15px 30px 15px; }
-        #msg-in { flex: 1; height: 50px; background: #111; border: 1px solid #333; border-radius: 25px; color: #fff; padding: 0 20px; font-size: 16px; }
-        .send-btn { background: var(--gold); color: black; border: none; height: 50px; padding: 0 25px; border-radius: 25px; font-weight: 900; cursor: pointer; margin-right: 8px; }
-
-        /* أدوات الزخرفة */
-        .decor-box { background: #1a1a1a; padding: 12px; border-radius: 10px; margin: 10px; border: 1px solid #333; text-align: center; }
-        .custom-input { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid #444; background: #000; color: white; margin-bottom: 15px; text-align: center; }
-        .decor-btn { width: 100%; padding: 10px; margin-top: 5px; border: none; border-radius: 5px; cursor: pointer; color: white; font-weight: bold; }
     </style>
 </head>
 <body>
@@ -57,7 +67,7 @@
 <div id="login-screen">
     <div class="login-card">
         <h1 class="name-glow theme-gold" style="font-size: 26px;">دخول الإمبراطورية</h1>
-        <input type="text" id="user-name-in" class="custom-input" placeholder="اكتب اسمك هنا..." style="margin-top:20px;">
+        <input type="text" id="user-name-in" style="width:100%; padding:15px; margin:20px 0; background:#000; color:white; border:1px solid gold; border-radius:10px; text-align:center;" placeholder="اكتب اسمك الملكي...">
         <button class="send-btn" style="width:100%; margin:0;" onclick="handleLogin()">دخول الآن</button>
     </div>
 </div>
@@ -65,17 +75,16 @@
 <div id="overlay" onclick="closeSides()"></div>
 
 <div class="header">
-    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px; color:white; cursor:pointer;">⚙️</button>
+    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px;">⚙️</button>
     <div class="name-glow theme-gold">إمبراطورية علوش</div>
-    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px; color:white; cursor:pointer;">👥</button>
+    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px;">👥</button>
 </div>
 
 <div id="side-r" class="side">
-    <h3 style="padding:20px; text-align:center; color:gold;">🛡️ المتصلون</h3>
-    <div id="admin-tools" style="padding:10px; display:none;">
-        <button onclick="db.ref('chat_v92').remove()" class="decor-btn" style="background:red;">🧹 تنظيف الشات</button>
+    <h3 style="padding:20px; text-align:center; color:gold; border-bottom:1px solid #222;">🛡️ المتصلون</h3>
+    <div id="on-list" style="padding:10px;">
+        <div style="padding:12px; border-bottom:1px solid #222; color:#00ffcc;">🤖 بوت الإمبراطورية (نشط)</div>
     </div>
-    <div id="on-list" style="padding:10px;"></div>
 </div>
 
 <div id="side-l" class="side">
@@ -84,15 +93,22 @@
         <input type="file" id="file-in" hidden onchange="changeAv(this)">
         <h2 id="display-name" class="name-glow theme-gold">الاسم</h2>
     </div>
-    <div class="decor-box">
-        <p style="font-size:12px; color:gold; margin-bottom:8px;">✍️ زخرفة اسمك:</p>
-        <input type="text" id="custom-decor" class="custom-input" placeholder="مثال: 👑" oninput="updateProfile()">
+
+    <div class="yt-box">
+        <p style="font-size:12px; color:gold; margin-bottom:5px;">🎬 بحث المقاطع (YouTube):</p>
+        <div style="display:flex; gap:5px;">
+            <input type="text" id="yt-query" style="flex:1; padding:8px; background:#000; color:white; border:1px solid #444; border-radius:5px;" placeholder="اكتب اسم المقطع...">
+            <button onclick="searchYT()" style="background:gold; border:none; border-radius:5px; padding:0 10px; cursor:pointer;">🔍</button>
+        </div>
+        <div id="yt-result"></div>
     </div>
-    <div class="decor-box">
-        <p style="font-size:12px; color:gold; margin-bottom:8px;">🎨 لون الاسم:</p>
-        <button class="decor-btn theme-gold" onclick="setTheme('theme-gold')">ذهبي</button>
-        <button class="decor-btn theme-fire" onclick="setTheme('theme-fire')">ناري</button>
-        <button class="decor-btn theme-ocean" onclick="setTheme('theme-ocean')">أزرق</button>
+
+    <div style="padding:15px;">
+        <p style="font-size:12px; color:gold;">✍️ زخرفة الاسم:</p>
+        <input type="text" id="custom-decor" style="width:100%; padding:10px; background:#000; color:white; border:1px solid #444; border-radius:5px; margin:5px 0;" placeholder="مثال: 👑" oninput="updateProfile()">
+        <p style="font-size:12px; color:gold; margin-top:10px;">🎨 الثيمات:</p>
+        <button onclick="setTheme('theme-gold')" style="width:100%; padding:8px; margin-top:5px; background:gold; color:black; font-weight:bold; border:none; border-radius:5px;">ذهبي</button>
+        <button onclick="setTheme('theme-fire')" style="width:100%; padding:8px; margin-top:5px; background:red; color:white; font-weight:bold; border:none; border-radius:5px;">ناري</button>
     </div>
 </div>
 
@@ -100,7 +116,7 @@
 
 <div class="footer">
     <input type="text" id="msg-in" placeholder="اكتب رسالتك..." onkeypress="if(event.key==='Enter') sendMsg()">
-    <button class="send-btn" onclick="sendMsg()">إرسال</button>
+    <button class="send-btn" id="send-trigger" onclick="sendMsg()">إرسال</button>
 </div>
 
 <script>
@@ -110,46 +126,47 @@
 
     let me = { name: "", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png", theme: "theme-gold", decor: "" };
 
-    // فحص إذا كان مسجلاً مسبقاً
     window.onload = () => {
-        let saved = localStorage.getItem('allosh_user');
-        if(saved) {
-            me = JSON.parse(saved);
-            startApp();
-        }
+        let saved = localStorage.getItem('allosh_user_v93');
+        if(saved) { me = JSON.parse(saved); startApp(); }
     };
 
     function handleLogin() {
         let n = document.getElementById('user-name-in').value.trim();
-        if(n.length < 2) return alert("الاسم قصير جداً!");
+        if(n.length < 2) return alert("الاسم قصير!");
         me.name = n;
-        localStorage.setItem('allosh_user', JSON.stringify(me));
+        localStorage.setItem('allosh_user_v93', JSON.stringify(me));
         startApp();
     }
 
     function startApp() {
         document.getElementById('login-screen').style.display = 'none';
-        document.getElementById('display-name').innerText = `${me.decor} ${me.name} ${me.decor}`;
-        document.getElementById('display-name').className = `name-glow ${me.theme}`;
-        if(me.name === "علوش") document.getElementById('admin-tools').style.display = 'block';
-        
-        const ref = db.ref('online_v92/' + me.name);
+        let dName = document.getElementById('display-name');
+        dName.innerText = me.name;
+        dName.className = (me.name === "علوش") ? "owner-style theme-gold" : `name-glow ${me.theme}`;
+        if(me.name === "علوش") dName.innerHTML = `👑 مالك الشات: علوش 👑`;
+
+        const ref = db.ref('online_v93/' + me.name);
         ref.set(me);
         ref.onDisconnect().remove();
     }
 
+    function searchYT() {
+        let q = document.getElementById('yt-query').value;
+        if(!q) return;
+        document.getElementById('yt-result').innerHTML = `<iframe height="150" src="https://www.youtube.com/embed?listType=search&list=${q}" frameborder="0" allowfullscreen></iframe>`;
+    }
+
     function updateProfile() {
         me.decor = document.getElementById('custom-decor').value;
-        document.getElementById('display-name').innerText = `${me.decor} ${me.name} ${me.decor}`;
-        localStorage.setItem('allosh_user', JSON.stringify(me));
-        db.ref('online_v92/' + me.name).update(me);
+        startApp();
+        db.ref('online_v93/' + me.name).update(me);
     }
 
     function setTheme(t) {
         me.theme = t;
-        document.getElementById('display-name').className = `name-glow ${t}`;
-        localStorage.setItem('allosh_user', JSON.stringify(me));
-        db.ref('online_v92/' + me.name).update(me);
+        startApp();
+        db.ref('online_v93/' + me.name).update(me);
     }
 
     function changeAv(i) {
@@ -158,8 +175,7 @@
             r.onload = (e) => { 
                 me.img = e.target.result; 
                 document.getElementById('my-av').src = me.img;
-                localStorage.setItem('allosh_user', JSON.stringify(me));
-                db.ref('online_v92/' + me.name).update(me);
+                db.ref('online_v93/' + me.name).update(me);
             };
             r.readAsDataURL(i.files[0]);
         }
@@ -167,29 +183,33 @@
 
     function sendMsg() {
         let i = document.getElementById('msg-in'); if(!i.value || !me.name) return;
-        db.ref('chat_v92').push({ u: me.name, t: i.value, a: me.img, theme: me.theme, decor: me.decor });
+        db.ref('chat_v93').push({ u: me.name, t: i.value, a: me.img, theme: me.theme, decor: me.decor });
         i.value = "";
     }
 
-    db.ref('chat_v92').limitToLast(30).on('child_added', s => {
+    db.ref('chat_v93').limitToLast(30).on('child_added', s => {
         let d = s.val();
         let div = document.createElement('div');
         div.style.display="flex"; div.style.gap="10px"; div.style.marginBottom="15px";
+        let isOwner = d.u === "علوش" ? "owner-style" : `name-glow ${d.theme}`;
+        let badge = d.u === "علوش" ? "👑 المالك" : "";
         div.innerHTML = `<img src="${d.a}" style="width:40px; height:40px; border-radius:50%; border:1px solid gold;">
             <div class="bubble">
-                <span class="name-glow ${d.theme}">${d.decor} ${d.u} ${d.decor}</span>
+                <span class="${isOwner}">${badge} ${d.decor} ${d.u} ${d.decor}</span>
                 <div style="margin-top:5px;">${d.t}</div>
             </div>`;
         document.getElementById('chat-flow').appendChild(div);
         document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
     });
 
-    db.ref('online_v92').on('value', s => {
-        let l = document.getElementById('on-list'); l.innerHTML = "";
+    db.ref('online_v93').on('value', s => {
+        let l = document.getElementById('on-list'); 
+        l.innerHTML = `<div style="padding:12px; border-bottom:1px solid #222; color:#00ffcc;">🤖 بوت الإمبراطورية (نشط)</div>`;
         s.forEach(u => {
             let d = u.val();
+            let isOwner = u.key === "علوش" ? "owner-style" : `name-glow ${d.theme}`;
             l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #222;">
-                <span class="name-glow ${d.theme}">${d.decor} ${u.key} ${d.decor}</span>
+                <span class="${isOwner}">${d.decor} ${u.key} ${d.decor}</span>
             </div>`;
         });
     });
